test/classes/initializers/siblingCall/loopTopLevel.good
loopTopLevel.chpl:4: In initializer:
loopTopLevel.chpl:14: error: use of this.init() call in loop body
